<resources>
    <string name="app_name">守机</string>
    <string name="title_home">首页</string>
    <string name="title_msg">消息</string>
    <string name="title_plus">周边</string>
    <string name="title_my">我的</string>
    <string name="my_contacts">联系人</string>
    <string name="my_safety">安全</string>
    <string name="my_contacts2">联系人</string>
    <string name="title_activity_login">登录</string>
    <string name="title_settings">设置</string>
    <string-array name="spingarr">
        <item>+86</item>
        <item>+87</item>
    </string-array>
</resources>
