<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:layout_marginTop="1dp"
    android:background="#ffffff"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_tab_home"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tab_home"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home_1" />

        <TextView
            android:id="@+id/text_tab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/title_home"
            android:textColor="#1497db" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tab_msg"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/msg_0" />

        <TextView
            android:id="@+id/text_tab_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/title_msg"
            android:textColor="#a3a3a3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tab_plus"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/plus_0" />

        <TextView
            android:id="@+id/text_tab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/title_plus"
            android:textColor="#a3a3a3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_my"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_tab_my"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/my_0" />

        <TextView
            android:id="@+id/text_tab_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/title_my"
            android:textColor="#a3a3a3" />
    </LinearLayout>

</LinearLayout>
